--- a/index.html
+++ b/index.html
@@ -7,12 +7,289 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/col.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <section id="hero">
+    <header class="site-header">
+      <div class="container">
+        <div class="row middle between">
+          <div class="logo-box">
+            <a href="#">
+              <img class="logo" src="imgs/bookmark-logo.svg" alt="bookmark-logo" width="150" height="25">
+            </a>
+          </div>
+          <nav class="site-nav">
+            <ul class="nav-list row middle between">
+              <li class="nav-item">
+                <a class="nav-link" href="#">FEATURES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">PRICING</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+              </li>
+              <li class="nav-item">
+                <button class="site-btn">LOGIN</button>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </section>
 
+  <section id="site-hero">
+    <div class="hero-inner container">
+      <div class="hero-entry row between">
+        <div class="hero-box">
+          <h2 class="hero-title">A Simple Bookmark Manager</h2>
+          <p class="hero-text">A clean and simple interface to organize your favourite websites. Open a new browser tab
+            and see your sites load instantly. Try it for free.</p>
+          <div class="hero-btns">
+            <button class="fbtn">Get it on Chrome</button>
+            <button class="sbtn">Get it on Firefox</button>
+          </div>
+        </div>
+        <div class="hero-img">
+          <img class="main-img" src="imgs/bookhero.png" alt="bookhero" width="555" height="385">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <main>
+    <section id="site-main">
+      <div class="fetures container">
+        <div class="fetures-entry center">
+          <div class="fetures-info">
+            <h3 class="app-title">Features</h3>
+            <p class="app-text txt">Our aim is to make it quick and easy for you to access your favourite websites. Your
+              bookmarks sync between your devices so you can access them on the go.</p>
+          </div>
+          <ul class="fetures-list row middle center">
+            <li class="fetures-item">
+              <a class="fetures-link a" href="#">Simple Bookmarking</a>
+            </li>
+            <li class="fetures-item">
+              <a class="fetures-link" href="#">Speedy Searching</a>
+            </li>
+            <li class="fetures-item">
+              <a class="fetures-link" href="#">Easy Sharing</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="click row between">
+          <div class="click-box">
+            <img class="click-img" src="imgs/main-two.svg" alt="main-two" width="560" height="346">
+          </div>
+          <div class="click-info">
+            <h4 class="click-title">Bookmark in one click</h4>
+            <p class="click-text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you
+              complete control over how you manage your favourite sites.</p>
+            <button class="more-btn">More Info</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="download">
+      <div class="app-box">
+        <div class="container">
+          <div class="extension center">
+            <h3 class="app-title">Download the extension</h3>
+            <p class="app-text">We've got more browsers in the pipeline. Please do let us know if you've got a favourite
+              you'd like us to prioritize.</p>
+
+            <ul class="app-list row between center">
+              <li class="app-item">
+                <img src="imgs/chromme.svg" alt="chromme" width="102" height="100">
+                <h4 class="app-heading">Add to Chrome</h4>
+                <p class="app-sub">Minimum version 62</p>
+                <button class="app-btn">Add & Install Extension</button>
+              </li>
+              <li class="app-item a">
+                <img src="imgs/firefox.svg" alt="firefox" width="105" height="100">
+                <h4 class="app-heading">Add to Firefox</h4>
+                <p class="app-sub">Minimum version 62</p>
+                <button class="app-btn">Add & Install Extension</button>
+              </li>
+              <li class="app-item b">
+                <img src="imgs/Combined Shape.png" alt="Combined" width="96" height="100">
+                <h4 class="app-heading">Add to Opera</h4>
+                <p class="app-sub">Minimum version 62</p>
+                <button class="app-btn">Add & Install Extension</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="ask">
+      <div class="container">
+        <div class="ask-info">
+          <h2 class="ask-title">Frequently Asked Questions</h2>
+          <p class="ask-text">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
+  
+          <div class="ask-box">
+            <ul class="ask-list">
+              <li class="ask-item row between"><p>What is Bookmark? </p> <i class='bx bx-chevron-down'></i></li>
+              <li class="ask-item row between"><p>How can I request a new browser? </p><i class='bx bx-chevron-down'></i>
+                <div class="drop-box">
+                  <p class="drop-desc">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </li>
+              <li class="ask-item row between"><p>Is there a mobile app? </p><i class='bx bx-chevron-down'></i></li>
+              <li class="ask-item row between"><p>What about other Chromium browsers? </p><i class='bx bx-chevron-down'></i></li>
+            </ul>
+          </div>
+          <button class="ask-btn">more info</button>
+        </div>
+  
+  
+      </div>
+    </section>
+    <!-- <section id="ask">
+      <div class="questions-box container">
+        <div class="ask-box center">
+          <h3 class="app-title">Frequently Asked Questions</h3>
+          <p class="app-text ttx">Here are some of our FAQs. If you have any other questions you'd like answered please
+            feel free to email us.</p>
+        </div>
+        
+        <ul class="asked-list">
+          <li class="asked-item row between">
+            <p>What is Bookmark?</p> <i class='bx bx-chevron-down'></i>
+          </li>
+          <li class="asked-item row between">
+            <p>How can I request a new browser?</p><i class='bx bx-chevron-down'></i>
+            <div class="asked-drop">
+              <p class="asked-desc">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+            </div>
+          </li>
+          <li class="asked-item row between">
+            <p>Is there a mobile app?</p><i class='bx bx-chevron-down'></i>
+          </li>
+          <li class="asked-item row between">
+            <p>What about other Chromium browsers?</p><i class='bx bx-chevron-down'></i>
+          </li>
+        </ul>
+        <div class="center">
+          <button class="asked-btn">more info</button>
+        </div>
+      </div>
+    </section> -->
+
+    <section id="email">
+      <div class="email-box container">
+        <div class="center">
+          <span class="email-info">35,000+ ALREADY JOINED</span>
+          <h3 class="email-title">Stay up-to-date with what we're doing</h3>
+        </div>
+        <div class="intro center">
+          <input class="mail" type="email" name="email" id="text" placeholder="Enter your email address">
+          <button class="mail-btn">Contact Us</button>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer id="site-footer">
+    <div class="footer-box container">
+      <div class="footer-entry row between">
+        <div class="row middle">
+          <a href="#">
+            <img class="logo" src="imgs/footer-book.svg" alt="footer-book" width="150" height="25">
+          </a>
+          <ul class="footer-list row middle">
+            <li class="footer-item">
+              <a class="footer-link" href="#">FEATURES</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="#">PRICING</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="social-box row middle">
+          <a href="#">
+            <i class='bx bxl-facebook'></i>
+          </a>
+          <a href="#">
+            <img class="social-link" src="imgs/twitter.svg" alt="twitter" width="26" height="26">
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <section id="search">
+    <div class="search-box container">
+      <ul class="fetures-list row middle center">
+        <li class="fetures-item">
+          <a class="fetures-link" href="#">Simple Bookmarking</a>
+        </li>
+        <li class="fetures-item">
+          <a class="fetures-link b" href="#">Speedy Searching</a>
+        </li>
+        <li class="fetures-item">
+          <a class="fetures-link" href="#">Easy Sharing</a>
+        </li>
+      </ul>
+      <div class="click row between">
+        <div class="click-box">
+          <img class="click-img second" src="imgs/book-search.svg" alt="book-search" width="600" height="360">
+        </div>
+        <div class="click-info">
+          <h4 class="click-title">Intelligent search</h4>
+          <p class="click-text">Our powerful search feature will help you find saved sites in no time at all. No need to
+            trawl through all of your bookmarks.</p>
+          <button class="more-btn">More Info</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="share">
+    <div class="search-box container">
+      <ul class="fetures-list row middle center">
+        <li class="fetures-item">
+          <a class="fetures-link" href="#">Simple Bookmarking</a>
+        </li>
+        <li class="fetures-item">
+          <a class="fetures-link" href="#">Speedy Searching</a>
+        </li>
+        <li class="fetures-item">
+          <a class="fetures-link d" href="#">Easy Sharing</a>
+        </li>
+      </ul>
+      <div class="click row between">
+        <div class="click-box">
+          <img class="click-img second" src="imgs/share-img.svg" alt="share" width="600" height="360">
+        </div>
+        <div class="click-info">
+          <h4 class="click-title">Share your bookmarks</h4>
+          <p class="click-text">Easily share your bookmarks and collections with others. Create a shareable link that
+            you can send at the click of a button.</p>
+          <button class="more-btn">More Info</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  
   <script src="js/main.js"></script>
 </body>
 
