--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <header class="site-header">
       <div class="container">
         <div class="row middle between">
-          <div class="logo-box">
+          <div id="log" class="logo-box">
             <a href="#">
-              <img class="logo" src="imgs/bookmark-logo.svg" alt="bookmark-logo" width="150" height="25">
+              <img id="log" class="logo" src="imgs/bookmark-logo.svg" alt="bookmark-logo" width="150" height="25">
             </a>
           </div>
-          <nav class="site-nav">
+          <nav id="navbar" class="site-nav">
             <ul class="nav-list row middle between">
               <li class="nav-item">
                 <a class="nav-link" href="#">FEATURES</a>
@@ -41,6 +41,10 @@
               </li>
             </ul>
           </nav>
+          <div class="menu">
+            <button id="open" class="menu-open"><i class='bx bx-menu'></i></button>
+            <button id="close" class="menu-close"><i class='bx bx-x' ></i></button>
+          </div>
         </div>
       </div>
     </header>
